logs/biomine.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/BioMine-0.9.2.egg-info'...
Listing './lib/python3.5/site-packages/biomine'...
Listing './lib/python3.5/site-packages/biomine/parsers'...
Compiling './lib/python3.5/site-packages/biomine/parsers/exacparser.py'...
***   File "./lib/python3.5/site-packages/biomine/parsers/exacparser.py", line 84
    print "file handle closed: " + writeToFile
                               ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/biomine/parsers/vcfparser.py'...
*** Sorry: TabError: inconsistent use of tabs and spaces in indentation (vcfparser.py, line 10)
Listing './lib/python3.5/site-packages/biomine/variant'...
Compiling './lib/python3.5/site-packages/biomine/variant/clinvarvariant.py'...
***   File "./lib/python3.5/site-packages/biomine/variant/clinvarvariant.py", line 50
    print "clinvarvariant: { " ,
                             ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/biomine/variant/exacvariant.py'...
***   File "./lib/python3.5/site-packages/biomine/variant/exacvariant.py", line 208
    print delim.join( map( str , self.__all__() ) )
              ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/biomine/variant/mafvariant.py'...
***   File "./lib/python3.5/site-packages/biomine/variant/mafvariant.py", line 120
    print "mafvariant: { " ,
                         ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/biomine/variant/variant.py'...
***   File "./lib/python3.5/site-packages/biomine/variant/variant.py", line 68
    print "variant { " ,
                     ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/biomine/variant/vepcolocatedvariant.py'...
***   File "./lib/python3.5/site-packages/biomine/variant/vepcolocatedvariant.py", line 41
    print "vepcolocatedvariant: { " ,
                                  ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/biomine/variant/vepconsequencevariant.py'...
***   File "./lib/python3.5/site-packages/biomine/variant/vepconsequencevariant.py", line 113
    print "vepconsequencevariant: { " ,
                                    ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/biomine/variant/vepvariant.py'...
***   File "./lib/python3.5/site-packages/biomine/variant/vepvariant.py", line 156
    print "vepvariant: { " ,
                         ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/biomine/webapi'...
Listing './lib/python3.5/site-packages/biomine/webapi/clinicaltrials'...
Compiling './lib/python3.5/site-packages/biomine/webapi/clinicaltrials/ctapi.py'...
***   File "./lib/python3.5/site-packages/biomine/webapi/clinicaltrials/ctapi.py", line 72
    print "biomine ERROR: bad subset. webapi.subset initializing to results"
                                                                           ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/biomine/webapi/ensembl'...
Compiling './lib/python3.5/site-packages/biomine/webapi/ensembl/ensemblapi.py'...
***   File "./lib/python3.5/site-packages/biomine/webapi/ensembl/ensemblapi.py", line 75
    print "biomine ERROR: bad subset. webapi.subset initializing to variant association results"
                                                                                               ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/biomine/webapi/entrez'...
Compiling './lib/python3.5/site-packages/biomine/webapi/entrez/entrezapi.py'...
***   File "./lib/python3.5/site-packages/biomine/webapi/entrez/entrezapi.py", line 129
    print "entrez Error: can't use WebEnv"
                                         ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/biomine/webapi/entrez/pubchemapi.py'...
***   File "./lib/python3.5/site-packages/biomine/webapi/entrez/pubchemapi.py", line 50
    print "biomine ERROR: bad subset. webapi.subset initializing to variant association results"
                                                                                               ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/biomine/webapi/exac'...
Compiling './lib/python3.5/site-packages/biomine/webapi/exac/exacapi.py'...
***   File "./lib/python3.5/site-packages/biomine/webapi/exac/exacapi.py", line 36
    print "biomine ERROR: bad subset. webapi.subset initializing to variant association results"
                                                                                               ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/biomine/webapi/webapi.py'...
***   File "./lib/python3.5/site-packages/biomine/webapi/webapi.py", line 28
    print "Response = " + str( self.response ) + ", ok? " + str( self.response.ok )
                      ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/biomine/writers'...
Compiling './lib/python3.5/site-packages/biomine/writers/maf.py'...
***   File "./lib/python3.5/site-packages/biomine/writers/maf.py", line 100
    print "finished generating .maf\n"
                                     ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
